@@ -61,12 +61,12 @@ public class JdbcDaoImpl extends JdbcDaoSupport implements BasicAclDao {
     public static final String RECIPIENT_USED_FOR_INHERITENCE_MARKER = "___INHERITENCE_MARKER_ONLY___";
     public static final String DEF_ACLS_BY_OBJECT_IDENTITY_QUERY = "SELECT RECIPIENT, MASK FROM acl_permission WHERE acl_object_identity = ?";
     public static final String DEF_OBJECT_PROPERTIES_QUERY = "SELECT ID, OBJECT_IDENTITY, ACL_CLASS, PARENT.OBJECT_IDENTITY as PARENT_OBJECT_IDENTITY FROM acl_object_identity LEFT OUTER JOIN acl_object_identity as PARENT ON acl_object_identity.parent_object=parent.id WHERE parent.id=acl_object_identity.parent_object and object_identity = ?";
-    private static final Log logger = LogFactory.getLog(JdbcDaoSupport.class);
+    private static final Log logger = LogFactory.getLog(JdbcDaoImpl.class);
 
     //~ Instance fields ========================================================
 
-    private MappingSqlQuery aclsByObjectIdentity;
-    private MappingSqlQuery objectProperties;
+    protected MappingSqlQuery aclsByObjectIdentity;
+    protected MappingSqlQuery objectProperties;
     private String aclsByObjectIdentityQuery;
     private String objectPropertiesQuery;
 
@@ -375,7 +375,7 @@ public class JdbcDaoImpl extends JdbcDaoSupport implements BasicAclDao {
      * preferably the backend RDBMS via schema constraints).
      * </p>
      */
-    private class AclDetailsHolder {
+    protected final class AclDetailsHolder {
         private AclObjectIdentity aclObjectIdentity;
         private AclObjectIdentity aclObjectParentIdentity;
         private Class aclClass;
